--- a/Project.toml
+++ b/Project.toml
@@ -14,3 +14,4 @@ NonSmoothProblems = "5655f2e6-550e-45fb-8023-520ea411539c"
 OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
