--- a/Project.toml
+++ b/Project.toml
@@ -4,14 +4,12 @@ authors = ["Gilles Bareilles <gilles.bareilles@protonmail.com>"]
 version = "0.1.0"
 
 [deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
-MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 NonSmoothProblems = "5655f2e6-550e-45fb-8023-520ea411539c"
-OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
