--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ authors = ["Gilles Bareilles <gilles.bareilles@protonmail.com>"]
 version = "0.1.0"
 
 [deps]
+ConjugateGradient = "410873c1-f8f8-46a6-bf19-1d1ac773cd81"
+ConvexHullProjection = "23bb58a7-9af7-4ddc-91d0-c8528a741764"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
-JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NonSmoothProblems = "5655f2e6-550e-45fb-8023-520ea411539c"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
