add callback so user can enrich the trace

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ConjugateGradient = "410873c1-f8f8-46a6-bf19-1d1ac773cd81"
 ConvexHullProjection = "23bb58a7-9af7-4ddc-91d0-c8528a741764"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NonSmoothProblems = "5655f2e6-550e-45fb-8023-520ea411539c"
