more general optimize! functions, efficiency of BFGS

--- a/Project.toml
+++ b/Project.toml
@@ -17,4 +17,5 @@ OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
