--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,6 +52,6 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: DocMeta, doctest
-            using JuliaExampleRepo
-            DocMeta.setdocmeta!(JuliaExampleRepo, :DocTestSetup, :(using JuliaExampleRepo); recursive=true)
-            doctest(JuliaExampleRepo)'
+            using NonSmoothSolvers
+            DocMeta.setdocmeta!(NonSmoothSolvers, :DocTestSetup, :(using NonSmoothSolvers); recursive=true)
+            doctest(NonSmoothSolvers)'
