--- a/Project.toml
+++ b/Project.toml
@@ -9,19 +9,14 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
-JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
-KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
-MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 NonSmoothProblems = "5655f2e6-550e-45fb-8023-520ea411539c"
-OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+QuadProgSimplex = "85789b06-2fe2-4664-9b69-af753cb80372"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
