--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,8 +30,8 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
-      - run: mkdir ~/.ssh/
-      - run: ssh-keyscan codeberg.org:22 >> ~/.ssh/known_hosts
+      # - run: mkdir ~/.ssh/
+      # - run: ssh-keyscan codeberg.org:22 >> ~/.ssh/known_hosts
       - run: |
           julia --project=NonSmoothSolvers -e '
           ENV["JULIA_PKG_USE_CLI_GIT"] = true
